ajustes doc swagger
